Bug Fixes and improvements
Fixed a bug where the scrollbars were visible and did not look visually appealing

--- a/src/main.scss
+++ b/src/main.scss
@@ -14,7 +14,7 @@
 
     padding: 24px 32px;
 
-    overflow: scroll;
+    overflow: hidden;
     height: 100%;
 }
 .column {
